// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`executeGraphqlRequest Errors during execution - error field throws 1`] = `
Array [
  [GraphQLError: Error while resolving \`error\` field],
]
`;

exports[`executeGraphqlRequest Errors during execution - throws multiple errors 1`] = `
Array [
  [GraphQLError: Error while resolving \`error\` field],
  [GraphQLError: Error while resolving \`nestedError\` field],
  [GraphQLError: Error while resolving \`nestedError\` field],
  [GraphQLError: Error while resolving \`nestedError\` field],
  [GraphQLError: Error while resolving \`nestedError\` field],
]
`;

exports[`executeGraphqlRequest Executable queries - basic - { people { name } } 1`] = `
Object {
  "data": Object {
    "people": Array [
      Object {
        "name": "James Baxley",
      },
      Object {
        "name": "Ashi Krishnan",
      },
      Object {
        "name": "Jesse Rosenberger",
      },
      Object {
        "name": "Trevor Scheer",
      },
    ],
  },
}
`;

exports[`executeGraphqlRequest Executable queries - with directives - { people { name { friends { name } } } 1`] = `
Object {
  "data": Object {
    "people": Array [
      Object {
        "friends": Array [
          Object {
            "name": "Ashi Krishnan",
          },
          Object {
            "name": "Jesse Rosenberger",
          },
          Object {
            "name": "Trevor Scheer",
          },
        ],
        "name": "James Baxley",
      },
      Object {
        "friends": Array [
          Object {
            "name": "James Baxley",
          },
          Object {
            "name": "Jesse Rosenberger",
          },
          Object {
            "name": "Trevor Scheer",
          },
        ],
        "name": "Ashi Krishnan",
      },
      Object {
        "friends": Array [
          Object {
            "name": "James Baxley",
          },
          Object {
            "name": "Ashi Krishnan",
          },
          Object {
            "name": "Trevor Scheer",
          },
        ],
        "name": "Jesse Rosenberger",
      },
      Object {
        "friends": Array [
          Object {
            "name": "James Baxley",
          },
          Object {
            "name": "Ashi Krishnan",
          },
          Object {
            "name": "Jesse Rosenberger",
          },
        ],
        "name": "Trevor Scheer",
      },
    ],
  },
}
`;

exports[`executeGraphqlRequest Executable queries - with multiple documents - { people { name } } 1`] = `
Object {
  "data": Object {
    "people": Array [
      Object {
        "name": "James Baxley",
      },
      Object {
        "name": "Ashi Krishnan",
      },
      Object {
        "name": "Jesse Rosenberger",
      },
      Object {
        "name": "Trevor Scheer",
      },
    ],
  },
}
`;

exports[`executeGraphqlRequest Executable queries - with nested selection sets - { people { name friends { name friends { name } } } } 1`] = `
Object {
  "data": Object {
    "people": Array [
      Object {
        "friends": Array [
          Object {
            "friends": Array [
              Object {
                "name": "James Baxley",
              },
              Object {
                "name": "Jesse Rosenberger",
              },
              Object {
                "name": "Trevor Scheer",
              },
            ],
            "name": "Ashi Krishnan",
          },
          Object {
            "friends": Array [
              Object {
                "name": "James Baxley",
              },
              Object {
                "name": "Ashi Krishnan",
              },
              Object {
                "name": "Trevor Scheer",
              },
            ],
            "name": "Jesse Rosenberger",
          },
          Object {
            "friends": Array [
              Object {
                "name": "James Baxley",
              },
              Object {
                "name": "Ashi Krishnan",
              },
              Object {
                "name": "Jesse Rosenberger",
              },
            ],
            "name": "Trevor Scheer",
          },
        ],
        "name": "James Baxley",
      },
      Object {
        "friends": Array [
          Object {
            "friends": Array [
              Object {
                "name": "Ashi Krishnan",
              },
              Object {
                "name": "Jesse Rosenberger",
              },
              Object {
                "name": "Trevor Scheer",
              },
            ],
            "name": "James Baxley",
          },
          Object {
            "friends": Array [
              Object {
                "name": "James Baxley",
              },
              Object {
                "name": "Ashi Krishnan",
              },
              Object {
                "name": "Trevor Scheer",
              },
            ],
            "name": "Jesse Rosenberger",
          },
          Object {
            "friends": Array [
              Object {
                "name": "James Baxley",
              },
              Object {
                "name": "Ashi Krishnan",
              },
              Object {
                "name": "Jesse Rosenberger",
              },
            ],
            "name": "Trevor Scheer",
          },
        ],
        "name": "Ashi Krishnan",
      },
      Object {
        "friends": Array [
          Object {
            "friends": Array [
              Object {
                "name": "Ashi Krishnan",
              },
              Object {
                "name": "Jesse Rosenberger",
              },
              Object {
                "name": "Trevor Scheer",
              },
            ],
            "name": "James Baxley",
          },
          Object {
            "friends": Array [
              Object {
                "name": "James Baxley",
              },
              Object {
                "name": "Jesse Rosenberger",
              },
              Object {
                "name": "Trevor Scheer",
              },
            ],
            "name": "Ashi Krishnan",
          },
          Object {
            "friends": Array [
              Object {
                "name": "James Baxley",
              },
              Object {
                "name": "Ashi Krishnan",
              },
              Object {
                "name": "Jesse Rosenberger",
              },
            ],
            "name": "Trevor Scheer",
          },
        ],
        "name": "Jesse Rosenberger",
      },
      Object {
        "friends": Array [
          Object {
            "friends": Array [
              Object {
                "name": "Ashi Krishnan",
              },
              Object {
                "name": "Jesse Rosenberger",
              },
              Object {
                "name": "Trevor Scheer",
              },
            ],
            "name": "James Baxley",
          },
          Object {
            "friends": Array [
              Object {
                "name": "James Baxley",
              },
              Object {
                "name": "Jesse Rosenberger",
              },
              Object {
                "name": "Trevor Scheer",
              },
            ],
            "name": "Ashi Krishnan",
          },
          Object {
            "friends": Array [
              Object {
                "name": "James Baxley",
              },
              Object {
                "name": "Ashi Krishnan",
              },
              Object {
                "name": "Trevor Scheer",
              },
            ],
            "name": "Jesse Rosenberger",
          },
        ],
        "name": "Trevor Scheer",
      },
    ],
  },
}
`;

exports[`parseGraphqlRequest Parses valid queries - basic - { people { name } } 1`] = `
query Basic {
  people {
    name
  }
}
`;

exports[`parseGraphqlRequest Parses valid queries - with directives - { people { name { friends { name } } } 1`] = `
query Directives($includeFriends: Boolean!) {
  people {
    name
    friends @include(if: $includeFriends) {
      name
    }
  }
}
`;

exports[`parseGraphqlRequest Parses valid queries - with multiple documents - { people { name } } 1`] = `
query FirstDocument {
  people {
    name
  }
}

query SecondDocument {
  people {
    id
  }
}
`;

exports[`parseGraphqlRequest Parses valid queries - with nested selection sets - { people { name friends { name friends { name } } } } 1`] = `
query Nested {
  people {
    name
    friends {
      name
      friends {
        name
      }
    }
  }
}
`;

exports[`parseGraphqlRequest Returns an error for invalid queries - empty query 1`] = `[GraphQLError: Syntax Error: Expected Name, found "}".]`;

exports[`parseGraphqlRequest Returns an error for invalid queries - empty selection set 1`] = `[GraphQLError: Syntax Error: Expected Name, found "}".]`;

exports[`parseGraphqlRequest Returns an error for invalid queries - missing closing } 1`] = `[GraphQLError: Syntax Error: Expected Name, found <EOF>.]`;

exports[`processGraphqlRequest Executable queries - basic - { people { name } } 1`] = `
Object {
  "people": Array [
    Object {
      "name": "James Baxley",
    },
    Object {
      "name": "Ashi Krishnan",
    },
    Object {
      "name": "Jesse Rosenberger",
    },
    Object {
      "name": "Trevor Scheer",
    },
  ],
}
`;

exports[`processGraphqlRequest Executable queries - with directives - { people { name { friends { name } } } 1`] = `
Object {
  "people": Array [
    Object {
      "friends": Array [
        Object {
          "name": "Ashi Krishnan",
        },
        Object {
          "name": "Jesse Rosenberger",
        },
        Object {
          "name": "Trevor Scheer",
        },
      ],
      "name": "James Baxley",
    },
    Object {
      "friends": Array [
        Object {
          "name": "James Baxley",
        },
        Object {
          "name": "Jesse Rosenberger",
        },
        Object {
          "name": "Trevor Scheer",
        },
      ],
      "name": "Ashi Krishnan",
    },
    Object {
      "friends": Array [
        Object {
          "name": "James Baxley",
        },
        Object {
          "name": "Ashi Krishnan",
        },
        Object {
          "name": "Trevor Scheer",
        },
      ],
      "name": "Jesse Rosenberger",
    },
    Object {
      "friends": Array [
        Object {
          "name": "James Baxley",
        },
        Object {
          "name": "Ashi Krishnan",
        },
        Object {
          "name": "Jesse Rosenberger",
        },
      ],
      "name": "Trevor Scheer",
    },
  ],
}
`;

exports[`processGraphqlRequest Executable queries - with multiple documents - { people { name } } 1`] = `
Object {
  "people": Array [
    Object {
      "name": "James Baxley",
    },
    Object {
      "name": "Ashi Krishnan",
    },
    Object {
      "name": "Jesse Rosenberger",
    },
    Object {
      "name": "Trevor Scheer",
    },
  ],
}
`;

exports[`processGraphqlRequest Executable queries - with nested selection sets - { people { name friends { name friends { name } } } } 1`] = `
Object {
  "people": Array [
    Object {
      "friends": Array [
        Object {
          "friends": Array [
            Object {
              "name": "James Baxley",
            },
            Object {
              "name": "Jesse Rosenberger",
            },
            Object {
              "name": "Trevor Scheer",
            },
          ],
          "name": "Ashi Krishnan",
        },
        Object {
          "friends": Array [
            Object {
              "name": "James Baxley",
            },
            Object {
              "name": "Ashi Krishnan",
            },
            Object {
              "name": "Trevor Scheer",
            },
          ],
          "name": "Jesse Rosenberger",
        },
        Object {
          "friends": Array [
            Object {
              "name": "James Baxley",
            },
            Object {
              "name": "Ashi Krishnan",
            },
            Object {
              "name": "Jesse Rosenberger",
            },
          ],
          "name": "Trevor Scheer",
        },
      ],
      "name": "James Baxley",
    },
    Object {
      "friends": Array [
        Object {
          "friends": Array [
            Object {
              "name": "Ashi Krishnan",
            },
            Object {
              "name": "Jesse Rosenberger",
            },
            Object {
              "name": "Trevor Scheer",
            },
          ],
          "name": "James Baxley",
        },
        Object {
          "friends": Array [
            Object {
              "name": "James Baxley",
            },
            Object {
              "name": "Ashi Krishnan",
            },
            Object {
              "name": "Trevor Scheer",
            },
          ],
          "name": "Jesse Rosenberger",
        },
        Object {
          "friends": Array [
            Object {
              "name": "James Baxley",
            },
            Object {
              "name": "Ashi Krishnan",
            },
            Object {
              "name": "Jesse Rosenberger",
            },
          ],
          "name": "Trevor Scheer",
        },
      ],
      "name": "Ashi Krishnan",
    },
    Object {
      "friends": Array [
        Object {
          "friends": Array [
            Object {
              "name": "Ashi Krishnan",
            },
            Object {
              "name": "Jesse Rosenberger",
            },
            Object {
              "name": "Trevor Scheer",
            },
          ],
          "name": "James Baxley",
        },
        Object {
          "friends": Array [
            Object {
              "name": "James Baxley",
            },
            Object {
              "name": "Jesse Rosenberger",
            },
            Object {
              "name": "Trevor Scheer",
            },
          ],
          "name": "Ashi Krishnan",
        },
        Object {
          "friends": Array [
            Object {
              "name": "James Baxley",
            },
            Object {
              "name": "Ashi Krishnan",
            },
            Object {
              "name": "Jesse Rosenberger",
            },
          ],
          "name": "Trevor Scheer",
        },
      ],
      "name": "Jesse Rosenberger",
    },
    Object {
      "friends": Array [
        Object {
          "friends": Array [
            Object {
              "name": "Ashi Krishnan",
            },
            Object {
              "name": "Jesse Rosenberger",
            },
            Object {
              "name": "Trevor Scheer",
            },
          ],
          "name": "James Baxley",
        },
        Object {
          "friends": Array [
            Object {
              "name": "James Baxley",
            },
            Object {
              "name": "Jesse Rosenberger",
            },
            Object {
              "name": "Trevor Scheer",
            },
          ],
          "name": "Ashi Krishnan",
        },
        Object {
          "friends": Array [
            Object {
              "name": "James Baxley",
            },
            Object {
              "name": "Ashi Krishnan",
            },
            Object {
              "name": "Trevor Scheer",
            },
          ],
          "name": "Jesse Rosenberger",
        },
      ],
      "name": "Trevor Scheer",
    },
  ],
}
`;

exports[`processGraphqlRequest Invalid queries - basic 1`] = `
Array [
  [GraphQLError: Cannot query field "invalidField" on type "Query".],
]
`;

exports[`processGraphqlRequest Invalid queries - missing directive 1`] = `
Array [
  [GraphQLError: Unknown directive "@invalid".],
]
`;

exports[`processGraphqlRequest Invalid queries - with invalid selection sets 1`] = `
Array [
  [GraphQLError: Cannot query field "invalidField" on type "Person".],
]
`;

exports[`processGraphqlRequest Invalid queries - with multiple errors 1`] = `
Array [
  [GraphQLError: Cannot query field "invalidOne" on type "Person".],
  [GraphQLError: Cannot query field "invalidTwo" on type "Query".],
]
`;

exports[`processGraphqlRequest Non-executable queries - error field throws 1`] = `
Array [
  [GraphQLError: Error while resolving \`error\` field],
]
`;

exports[`processGraphqlRequest Non-executable queries - throws multiple errors 1`] = `
Array [
  [GraphQLError: Error while resolving \`error\` field],
  [GraphQLError: Error while resolving \`nestedError\` field],
  [GraphQLError: Error while resolving \`nestedError\` field],
  [GraphQLError: Error while resolving \`nestedError\` field],
  [GraphQLError: Error while resolving \`nestedError\` field],
]
`;

exports[`processGraphqlRequest Unparseable queries - empty query 1`] = `
Array [
  [GraphQLError: Syntax Error: Expected Name, found "}".],
]
`;

exports[`processGraphqlRequest Unparseable queries - empty selection set 1`] = `
Array [
  [GraphQLError: Syntax Error: Expected Name, found "}".],
]
`;

exports[`processGraphqlRequest Unparseable queries - missing closing } 1`] = `
Array [
  [GraphQLError: Syntax Error: Expected Name, found <EOF>.],
]
`;

exports[`validateGraphqlRequest invalid queries against schema: basic 1`] = `
Array [
  [GraphQLError: Cannot query field "invalidField" on type "Query".],
]
`;

exports[`validateGraphqlRequest invalid queries against schema: missing directive 1`] = `
Array [
  [GraphQLError: Unknown directive "@invalid".],
]
`;

exports[`validateGraphqlRequest invalid queries against schema: with invalid selection sets 1`] = `
Array [
  [GraphQLError: Cannot query field "invalidField" on type "Person".],
]
`;

exports[`validateGraphqlRequest invalid queries against schema: with multiple errors 1`] = `
Array [
  [GraphQLError: Cannot query field "invalidOne" on type "Person".],
  [GraphQLError: Cannot query field "invalidTwo" on type "Query".],
]
`;
